chap.02/02. ingress-multi/yaml/ingress/ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-multi
  labels:
    name: myingress-multi
  annotations: 
    kubernetes.io/ingress.global-static-ip-name: "k8s-ip"
spec:
  rules:
  - host: www.solju.kr #인그레스는 www.solju.kr 도메인 이름을 서비스에 매핑함
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-svc-basic
            port: 
              number: 80 #모든 요청은 web-svc-basic 서비스의 포트 80으로 전달 
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: web-svc-v1
            port: 
              number: 80 #모든 요청은 web-svc-v1 서비스의 포트 80으로 전달 
      - pathType: Prefix
        path: /v2
        backend:
          service:
            name: web-svc-v2
            port: 
              number: 80 #모든 요청은 web-svc-v2 서비스의 포트 80으로 전달
